--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,6 @@ NODE_ENV = 'development'
 
 # 本地环境接口地址
 # VITE_API_URL = 'https://www.xiangzi77.tk/'
-VITE_API_URL = 'https://mentapi.coune.online/'
-VITE_API_AIURL = 'https://mentapi.coune.online'
+VITE_API_URL = 'https://reapi.coune.online/'
+VITE_API_AIURL = 'https://reapi.coune.online'
 VITE_ColorAPI_URL = 'https://mock.mengxuegu.com/mock/634f6425369a770d74bbf7b9/example'
